<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
	<string name="disable">활성화하였습니다</string>
	<string name="enable">활성화하지 않았습니다</string>
	<string name="togger_enable">활성화</string>
	<string name="newMessage">새 정보 생성하기</string>
	<string name="newEvent">새 프로젝트 생성하기</string>
	<string name="hello">Hello World, IndexApp!</string>
	<string name="app_name">문자 그룹 발송하기</string>
	<string name="menu_message">정보 관리</string>
	<string name="menu_schedule">배정 관리</string>
	<string name="menu_group">그룹 관리</string>
	<string name="menu_event">문자 그룹 발송하기</string>
	<string name="menu_log">로그 조회</string>
	<string name="menu_about">관하여</string>
	<string name="menu_edit">편집 수정</string>
	<string name="menu_delete">삭제</string>
	<string name="menu_cancel">취소</string>
	<string name="menu_run">운행</string>
	<string name="button_up">위로</string>
	<string name="message">문자</string>
	<string name="group">그룹</string>
	<string name="schedule">배정</string>
	<string name="event">프로젝트 명칭</string>
	<string name="contactName">성명</string>
	<string name="phoneNumber">전화</string>
	<string name="input_new_event">프로젝트 명칭 입력하기</string>
	<string name="loadFromFile">파일에서 로딩하기</string>
	<string name="editContact">연락자 편집하기</string>
	<string name="nextRunTime">실행시간 설정하기:</string>
	<string name="about">관하여</string>
	<string name="about_message">작가 하흠전 happywhitefox@163.com	android소프트웨어 커스터마이징 개발 서비스를 제공</string>
	<string name="notValidFile">정확한 파일을 선택하십시오!</string>
	<string name="toast_save_success">성공적으로 저장하였습니다!</string>
	<string name="toast_delete_success">성공적으로 삭제하였습니다.</string>
	<string name="toast_message_null">정보 내용이 없는 문자는 발송되지 않습니다!</string>
	<string name="toast_contact_null">프로젝트 연락자가 없는 문자는 발송되지 않습니다!</string>
	<string name="toast_message_set_successful">성공적으로 설정되었습니다.</string>
	<string name="deleteCount">삭제한 기록수:</string>
	<string name="message_confirm_clear">모든 연락자를 삭제하시겠습니까?</string>
	<string name="stringScheduleNotSet">배정을 설정하지 않았습니다</string>
	<string name="loadFromPhone">전화번호부에서 추가하기</string>
	<string name="button_message_new">정보 추가하기</string>
	<string name="button_ok">확인</string>
	<string name="button_save">저장</string>
	<string name="button_cancel">취소</string>
	<string name="button_clear">비움</string>
	<string name="buttonRunNow">즉시 운행</string>
	<string name="buttonSchedule">배정 설정</string>
	<color name="red">#FF0000</color>
	<color name="green">#00FF00</color>
	<color name="blue">#0000FF</color>
	<color name="yellow">#FFFF00</color>
	<color name="Red">#FFFFFF</color>
	<color name="Turquoise">#C0C0C0</color>
	<color name="LightBlue">#808080</color>
	<color name="DarkBlue">#000000</color>
	<color name="LightPurple">#FF8040</color>
	<color name="DarkPurple">#804000</color>
	<color name="Yellow">#800000</color>
	<color name="PastelGreen">#808000</color>
	<color name="Pink">#408080</color>
	<string name="stringBeginSend">&gt;&gt;&gt;&gt;&gt;&gt;문자
		발송 중입니다&gt;&gt;&gt;&gt;&gt;&gt;</string>
	<string name="stringEndSend">&lt;&lt;&lt;&lt;문자가
		발송되었습니다!해당 화면을 클릭하면 이전 페이지로 되돌아갑니다.&lt;&lt;&lt;&lt;</string>
	<string name="stringBegin">문자 발송 목적지</string>
	<string name="stringSuccess">성공</string>
</resources>