<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="2"
		android:orientation="vertical">
		<ListView android:id="@+id/contactList" android:layout_width="fill_parent"
			android:layout_height="fill_parent"></ListView>
	</LinearLayout>
	<LinearLayout android:layout_height="60dip"
		android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content" android:text="@string/loadFromPhone"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:id="@+id/ButtonLoadContactFromPhone" android:onClick="onClick"></Button>
		<Button android:layout_height="wrap_content" android:text="@string/loadFromFile"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:id="@+id/ButtonLoadContactFromFile" android:onClick="onClick"></Button>
		<Button android:layout_height="wrap_content" android:text="@string/button_clear"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:id="@+id/buttonClear" android:onClick="onClick"></Button>
	</LinearLayout>
</LinearLayout>
