<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="horizontal">
		<EditText android:layout_height="wrap_content" android:id="@+id/EditCurrentPath"
			android:layout_width="fill_parent" android:layout_weight="1"></EditText>
		<Button android:id="@+id/ButtonUp"
			android:layout_weight="3" android:onClick="onClick" android:text="@string/button_up"
			 android:layout_gravity="center_vertical|center_horizontal" android:layout_width="fill_parent"
		android:layout_height="50px" ></Button>
	</LinearLayout>
	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
		android:layout_weight="1" android:layout_height="fill_parent">
	</ListView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<Button android:text="@string/button_ok" android:id="@+id/ButtonLoad"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="2" android:onClick="onClick"></Button>
		<Button android:text="@string/button_cancel" android:id="@+id/ButtonCancel"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="2" android:onClick="onClick"></Button>
	</LinearLayout>
</LinearLayout>
